# eda-agent

./: .env.example  .gitignore  PLAN.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
data/: dota2_matches.csv  iris.csv  restaurant_data.csv  titanic.csv
scripts/: generate_demo_data.py
src/eda_agent/: __init__.py  agent.py  executor.py  main.py  profiler.py  report.py  tools.py
src/eda_agent/providers/: __init__.py  anthropic_provider.py  gemini_provider.py  openai_provider.py
src/eda_agent/templates/: report.html
tests/: test_executor.py  test_profiler.py  test_providers.py  test_report.py
