[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "eda-agent"
version = "1.0.0"
description = "An autonomous AI agent that ingests any dataset, analyzes it, generates visualizations, and produces narrative reports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Anton"}]

dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.15.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "openpyxl>=3.1.0",
    "pyarrow>=12.0.0",
    "jinja2>=3.1.0",
    "typer[all]>=0.9.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.28.0",
]

[project.scripts]
eda-agent = "eda_agent.main:app"

[tool.setuptools.packages.find]
where = ["src"]
